--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/slick.min.css">
     <link rel="stylesheet" href="css/slick-theme.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.1/dist/css/splide.min.css">
     <link rel="stylesheet" href="css/index.css">
     <script src="js/header.js"></script>
 </head>
@@ -143,48 +144,256 @@
         </section>
 
         <section class="pt_155">
+            <div class="container">
+
+                <div class="servicesSliderOne">
+                    <div class="splide__track">
+                        <div class="splide__list">
+                            <div class="splide__slide">
+                                <div>
+                                    <div class="grid two-equal-col">
+                                        <div></div>
+                                        <div>
+                                            <h3 class="text_xxxl">Mobile Application Development</h3>
+                                            <p class="pt_40">
+                                                Lorem ipsum dolor sit amet,consectetur adipiscing elit. Lorem proin
+                                                habitant non
+                                                vulputate
+                                                sollicitudin ipsum congue vel.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div>
+                                    <div class="grid two-equal-col">
+                                        <div></div>
+                                        <div>
+                                            <h3 class="text_xxxl">Web Application Development</h3>
+                                            <p class="pt_40">
+                                                Lorem ipsum dolor sit amet,consectetur adipiscing elit. Lorem proin
+                                                habitant non
+                                                vulputate
+                                                sollicitudin ipsum congue vel.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div>
+                                    <div class="grid two-equal-col">
+                                        <div></div>
+                                        <div>
+                                            <h3 class="text_xxxl">Website & CMS Development</h3>
+                                            <p class="pt_40">
+                                                Lorem ipsum dolor sit amet,consectetur adipiscing elit. Lorem proin
+                                                habitant non
+                                                vulputate
+                                                sollicitudin ipsum congue vel.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div>
+                                    <div class="grid two-equal-col">
+                                        <div></div>
+                                        <div>
+                                            <h3 class="text_xxxl">Cloud Solutions</h3>
+                                            <p class="pt_40">
+                                                Lorem ipsum dolor sit amet,consectetur adipiscing elit. Lorem proin
+                                                habitant non
+                                                vulputate
+                                                sollicitudin ipsum congue vel.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div>
+                                    <div class="grid two-equal-col">
+                                        <div></div>
+                                        <div>
+                                            <h3 class="text_xxxl">Digital Marketing</h3>
+                                            <p class="pt_40">
+                                                Lorem ipsum dolor sit amet,consectetur adipiscing elit. Lorem proin
+                                                habitant non
+                                                vulputate
+                                                sollicitudin ipsum congue vel.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div>
+                                    <div class="grid two-equal-col">
+                                        <div></div>
+                                        <div>
+                                            <h3 class="text_xxxl">Data, BI, & Analytics Consulting Services</h3>
+                                            <p class="pt_40">
+                                                Lorem ipsum dolor sit amet,consectetur adipiscing elit. Lorem proin
+                                                habitant non
+                                                vulputate
+                                                sollicitudin ipsum congue vel.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div>
+                                    <div class="grid two-equal-col">
+                                        <div></div>
+                                        <div>
+                                            <h3 class="text_xxxl">DevOps Services and Solutionss</h3>
+                                            <p class="pt_40">
+                                                Lorem ipsum dolor sit amet,consectetur adipiscing elit. Lorem proin
+                                                habitant non
+                                                vulputate
+                                                sollicitudin ipsum congue vel.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div>
+                                    <div class="grid two-equal-col">
+                                        <div></div>
+                                        <div>
+                                            <h3 class="text_xxxl">Quality & Perfor-mance Engineering</h3>
+                                            <p class="pt_40">
+                                                Lorem ipsum dolor sit amet,consectetur adipiscing elit. Lorem proin
+                                                habitant non
+                                                vulputate
+                                                sollicitudin ipsum congue vel.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div>
+                                    <div class="grid two-equal-col">
+                                        <div></div>
+                                        <div>
+                                            <h3 class="text_xxxl">Blockchain</h3>
+                                            <p class="pt_40">
+                                                Lorem ipsum dolor sit amet,consectetur adipiscing elit. Lorem proin
+                                                habitant non
+                                                vulputate
+                                                sollicitudin ipsum congue vel.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div>
+                                    <div class="grid two-equal-col">
+                                        <div></div>
+                                        <div>
+                                            <h3 class="text_xxxl">No Code solutions</h3>
+                                            <p class="pt_40">
+                                                Lorem ipsum dolor sit amet,consectetur adipiscing elit. Lorem proin
+                                                habitant non
+                                                vulputate
+                                                sollicitudin ipsum congue vel.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
             <div class="container-left">
-                <div class="servicesSliderTwo">
-                    <div class="service-box">
-                        <img src="img/cloud.svg" alt="cloud">
-                        <h3>Mobile Application Development</h3>
+                <div class="servicesSliderTwo pt_60">
+
+                    <div class="splide__track">
+                        <div class="splide__list">
+                            <div class="splide__slide">
+                                <div class="service-box">
+                                    <img src="img/cloud.svg" alt="cloud">
+                                    <h3>Mobile Application Development</h3>
+                                </div>
+                            </div>
+                            <div class="splide__slide">
+                                <div class="service-box">
+                                    <img src="img/cloud.svg" alt="cloud">
+                                    <h3>Web Application Development</h3>
+                                </div>
+                            </div>
+                            <div class="splide__slide">
+                                <div class="service-box">
+                                    <img src="img/cloud.svg" alt="cloud">
+                                    <h3>Website & CMS Development</h3>
+                                </div>
+                            </div>
+                            <div class="splide__slide">
+                                <div class="service-box">
+                                    <img src="img/cloud.svg" alt="cloud">
+                                    <h3>Cloud Solutions</h3>
+                                </div>
+                            </div>
+                            <div class="splide__slide">
+                                <div class="service-box">
+                                    <img src="img/cloud.svg" alt="cloud">
+                                    <h3>Digital Marketing</h3>
+                                </div>
+                            </div>
+                            <div class="splide__slide">
+                                <div class="service-box">
+                                    <img src="img/cloud.svg" alt="cloud">
+                                    <h3>Data, BI, & Analytics Consulting Services</h3>
+                                </div>
+                            </div>
+                            <div class="splide__slide">
+                                <div class="service-box">
+                                    <img src="img/cloud.svg" alt="cloud">
+                                    <h3>DevOps Services and Solutionss</h3>
+                                </div>
+                            </div>
+                            <div class="splide__slide">
+                                <div class="service-box">
+                                    <img src="img/cloud.svg" alt="cloud">
+                                    <h3>Quality & Perfor-mance Engineering</h3>
+                                </div>
+                            </div>
+                            <div class="splide__slide">
+                                <div class="service-box">
+                                    <img src="img/cloud.svg" alt="cloud">
+                                    <h3>Blockchain</h3>
+                                </div>
+                            </div>
+                            <div class="splide__slide">
+                                <div class="service-box">
+                                    <img src="img/cloud.svg" alt="cloud">
+                                    <h3>No Code solutions</h3>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="service-box">
-                        <img src="img/cloud.svg" alt="cloud">
-                        <h3>Web Application Development</h3>
-                    </div>
-                    <div class="service-box">
-                        <img src="img/cloud.svg" alt="cloud">
-                        <h3>Website & CMS Development</h3>
-                    </div>
-                    <div class="service-box">
-                        <img src="img/cloud.svg" alt="cloud">
-                        <h3>Cloud Solutions</h3>
-                    </div>
-                    <div class="service-box">
-                        <img src="img/cloud.svg" alt="cloud">
-                        <h3>Digital Marketing</h3>
-                    </div>
-                    <div class="service-box">
-                        <img src="img/cloud.svg" alt="cloud">
-                        <h3>Data, BI, & Analytics Consulting Services</h3>
-                    </div>
-                    <div class="service-box">
-                        <img src="img/cloud.svg" alt="cloud">
-                        <h3>DevOps Services and Solutionss</h3>
-                    </div>
-                    <div class="service-box">
-                        <img src="img/cloud.svg" alt="cloud">
-                        <h3>Quality & Perfor-mance Engineering</h3>
-                    </div>
-                    <div class="service-box">
-                        <img src="img/cloud.svg" alt="cloud">
-                        <h3>Blockchain</h3>
-                    </div>
-                    <div class="service-box">
-                        <img src="img/cloud.svg" alt="cloud">
-                        <h3>No Code solutions</h3>
-                    </div>
+
                 </div>
             </div>
         </section>
@@ -560,6 +769,7 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.6/dist/js/splide.min.js"></script>
     <script>
         $('.testimonialSlider').slick({
             variableWidth: true,
@@ -577,22 +787,60 @@
             ]
         })
 
-        $('.servicesSliderTwo').slick({
-            variableWidth: true,
+        // $('.servicesSliderOne').slick({
+        //     slidesToShow: 1,
+        //     slidesToScroll: 1,
+        //     arrows: false,
+        //     // loop: false,
+        //     // infinite: false,
+        //     fade: true,
+        //     asNavFor: '.servicesSliderTwo'
+        // })
+        // $('.servicesSliderTwo').slick({
+        //     variableWidth: true,
+        //     arrows: false,
+        //     dots: false,
+        //     loop: true,
+        //     // infinite: false,
+        //     asNavFor: '.servicesSliderOne',
+        //     focusOnSelect: true,
+        //     centerMode: true,
+        //     responsive: [
+        //         {
+        //             breakpoint: 767,
+        //             settings: {
+        //                 variableWidth: false,
+        //                 slidesToShow: 1,
+        //             }
+        //         }
+        //     ]
+        // })
+
+        var servicesSliderOne = new Splide('.servicesSliderOne', {
+            type: 'fade',
+            pagination: true,
             arrows: false,
-            dots: false,
-            loop: false,
-            infinite: false,
-            responsive: [
-                {
-                    breakpoint: 767,
-                    settings: {
-                        variableWidth: false,
-                        slidesToShow: 1,
-                    }
-                }
-            ]
-        })
+            cover: true,
+        });
+
+        var thumbnails = new Splide('.servicesSliderTwo', {
+            rewind: true,
+            autoWidth: true,
+            isNavigation: true,
+            gap: 10,
+            arrows: false,
+            // focus: 'center',
+            pagination: false,
+            cover: true,
+            dragMinThreshold: {
+                mouse: 4,
+                touch: 10,
+            }
+        });
+
+        servicesSliderOne.mount();
+        thumbnails.mount();
+        servicesSliderOne.sync(thumbnails);
 
         $(window).on('load resize', function () {
             var totalSlide = $('.slick-dots li').length;
@@ -607,7 +855,6 @@
                 $('header').removeClass("white");
             }
         });
-
 
     </script>
 </body>
