--- a/index.html
+++ b/index.html
@@ -787,14 +787,45 @@
             ]
         })
 
-        $('#reviews .grid').slick({
-            slidesToShow: 1,
-            slidesToScroll: 1,
-            arrows: false,
-            dots: true,
-            // loop: false,
-            // infinite: false,
-        })
+
+        mobileOnlySlider("#reviews .grid", true, false, 767);
+
+        function mobileOnlySlider($slidername, $dots, $arrows, $breakpoint) {
+            var slider = $($slidername);
+            var settings = {
+                mobileFirst: true,
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                arrows: false,
+                dots: true,
+                responsive: [
+                    {
+                        breakpoint: $breakpoint,
+                        settings: "unslick"
+                    }
+                ]
+            };
+
+            slider.slick(settings);
+
+            $(window).on("resize", function () {
+                if ($(window).width() > $breakpoint) {
+                    return;
+                }
+                if (!slider.hasClass("slick-initialized")) {
+                    return slider.slick(settings);
+                }
+            });
+        }
+
+        // $('#reviews .grid').slick({
+        //     slidesToShow: 1,
+        //     slidesToScroll: 1,
+        //     arrows: false,
+        //     dots: true,
+        //     // loop: false,
+        //     // infinite: false,
+        // })
 
         // $('.servicesSliderOne').slick({
         //     slidesToShow: 1,
