--- a/index.html
+++ b/index.html
@@ -744,15 +744,15 @@
 
         <section id="cards" class="pt_120 pb_60">
             <div class="container">
-                <h2 class="blue regular text_xxl pb_60">
-                    Let's <strong>build</strong> something<br>
-                    <strong>together</strong> that matters
+                <h2 class="blue regular text_xl pb_40">
+                    Let's <strong class="medium">build</strong> something<br>
+                    <strong class="medium">together</strong> that matters
                 </h2>
                 <a href="javascript:void(0)" class="btn-1">Contact Us</a>
-                <div class="flex pt_120">
+                <div class="flex pt_60">
                     <div class="card-item">
                         <img src="img/card-01.jpg" alt="card-01">
-                        <h3 class="text_med pt_40 pb_16">Lorem ipsum dolor sit amet, </h3>
+                        <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
                         <p class="pb_30">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
                             quam pulvinar molestie.
@@ -762,7 +762,7 @@
 
                     <div class="card-item">
                         <img src="img/card-02.jpg" alt="card-01">
-                        <h3 class="text_med pt_40 pb_16">Lorem ipsum dolor sit amet, </h3>
+                        <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
                         <p class="pb_30">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
                             quam pulvinar molestie.
@@ -772,7 +772,7 @@
 
                     <div class="card-item">
                         <img src="img/card-03.jpg" alt="card-01">
-                        <h3 class="text_med pt_40 pb_16">Lorem ipsum dolor sit amet, </h3>
+                        <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
                         <p class="pb_30">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
                             quam pulvinar molestie.
@@ -782,7 +782,7 @@
 
                     <div class="card-item">
                         <img src="img/card-04.jpg" alt="card-01">
-                        <h3 class="text_med pt_40 pb_16">Lorem ipsum dolor sit amet, </h3>
+                        <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
                         <p class="pb_30">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
                             quam pulvinar molestie.
@@ -794,7 +794,7 @@
 
                     <div class="card-item">
                         <img src="img/card-04.jpg" alt="card-01">
-                        <h3 class="text_med pt_40 pb_16">Lorem ipsum dolor sit amet, </h3>
+                        <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
                         <p class="pb_30">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
                             quam pulvinar molestie.
@@ -804,7 +804,7 @@
 
                     <div class="card-item">
                         <img src="img/card-04.jpg" alt="card-01">
-                        <h3 class="text_med pt_40 pb_16">Lorem ipsum dolor sit amet, </h3>
+                        <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
                         <p class="pb_30">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
                             quam pulvinar molestie.
