--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
         </header>
 
-        <section id="hero" class="pt_40 pb_155">
+        <section id="hero" class="pt_80 pb_155">
 
             <div class="cursor"></div>
 
@@ -813,7 +813,7 @@
                     </div>
 
                 </div>
-                <div class="text-center pt_60">
+                <div class="text-center pb_40">
                     <a href="javascript:void(0)" class="btn-1" id="more-service">View More</a>
                 </div>
             </div>
@@ -824,7 +824,7 @@
                 <h2 class="bold text_xl pb_16">Web and Mobile App Technologies </h2>
                 <p class="medium capitalize">We gained expertise over the years</p>
 
-                <div class="flex pt_88">
+                <div class="flex pt_60">
                     <div>
                         <div class="circular-box">
                             <img src="img/python.png" alt="python" class="img-fluid">
@@ -907,8 +907,8 @@
 
         <section id="why" class="pt_88 pb_88">
             <div class="container-left">
-                <h2 class="text_xxl medium mob-text-center">Why <br>
-                    <span class="text_xxl bold">Us.</span>
+                <h2 class="text_xxl medium mob-text-center" style="line-height:1.2">Why <br>
+                    us.
                 </h2>
 
                 <div class="testimonialSlider pt_40">
@@ -1296,14 +1296,14 @@
             $("html, body").animate({ scrollTop: $('#counters').offset().top }, 1000);
         }
 
-        $(window).scroll(function () {
-            if ($(this).scrollTop() > 50) {
-                $('header').addClass("white");
-            }
-            else {
-                $('header').removeClass("white");
-            }
-        });
+        // $(window).scroll(function () {
+        //     if ($(this).scrollTop() > 50) {
+        //         $('header').addClass("white");
+        //     }
+        //     else {
+        //         $('header').removeClass("white");
+        //     }
+        // });
 
     </script>
     <script>
