--- a/index.html
+++ b/index.html
@@ -919,7 +919,7 @@
                         <div class="name">Jake Hansen</div>
                         <p>
                             We have been working with Startxlabs for nearly two years and have been happy working with
-                            the <a href="javascript:void(0)">read more...</a>
+                            the...
                         </p>
                         <div class="designation">Founder</div>
                     </div>
@@ -930,7 +930,7 @@
                         <div class="name">Brandon Raganx</div>
                         <p>
                             We would like to put a “Seal of Trust” on how the team did a professional job in developing
-                            TireJect. <a href="javascript:void(0)">read more...</a>
+                            TireJect...
                         </p>
                         <div class="designation">Founder</div>
                     </div>
@@ -953,7 +953,7 @@
                         <div class="name">Ashok Pundit</div>
                         <p>
                             Right from the “Idea” of Amar Ujala, and till it was a “Reality”, they have been developing
-                            our <a href="javascript:void(0)">read more...</a>
+                            our...
                         </p>
                         <div class="designation">Founder</div>
                     </div>
@@ -963,7 +963,7 @@
 
         <section id="contact" class="black_bg pt_120 pb_120">
             <div class="container">
-                <div class="grid two-equal-col">
+                <div class="grid two-equal-col align-center">
                     <div>
                         <img src="img/digital.png" alt="digital" class="img-fluid">
                     </div>
@@ -972,7 +972,7 @@
                             Craft your <strong>idea</strong> <br>into an exceptional <br><strong>digital
                                 experience</strong>
                         </h2>
-                        <div class="pt_80">
+                        <div class="pt_60">
                             <a href="javascript:void(0)" class="btn-1">Let’s Talk</a>
                         </div>
                     </div>
@@ -984,10 +984,10 @@
                         </h3>
                         <p class="text_xs pt_30 white">We are always available to collaborate in our clients time zone
                         </p>
-                        <div class="pt_88">
+                        <div class="pt_60">
                             <a href="javascript:void(0)" class="btn-1">Let's Connect! </a>
                         </div>
-                        <div class="contact-details pt_120">
+                        <div class="contact-details pt_60">
                             <div class="icon-box white">
                                 <div>
                                     <img src="img/mail.svg" alt="mail">
