--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </section>
 
         <section class="pt_155">
-            <div class="container">
+            <div class="container-right">
 
 
                 <div class="servicesSliderOne">
